infra/k3s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: spatial-server
  labels:
    name: spatial-server
